--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["proc_macro", "procmacro"]
 edition = "2021"
 publish = ["star-atlas", "crates-io"]
 repository = "https://github.com/staratlasmeta/wasm_bindgen_cfg"
+license-file = "LICENSE"
 
 [lib]
 proc-macro = true
